# logistics_mobility

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RUNBOOK.md  docker-compose.yml  messages.pot  package-lock.json  pyproject.toml  requirements.txt  run.py
PRD/: DATA_FRESHNESS.md  PRD_driver_v1.0.md  PRD_recognizer_v1.0.md  PRD_vehicle_v1.0.md  TDD_data_schema_v2.0.md  TZ_data_schema_v2.0.md  TZ_sistema_ucheta_dokumentov_v1.4.md
app/: __init__.py  cli.py  config.py  db_types.py  extensions.py  forms_common.py
app/auth/: __init__.py  forms.py  routes.py
app/docs/: __init__.py  constants.py  forms.py  models.py  persistence.py  pipeline.py  requirements.py  routes.py  services.py  status.py  validation.py
app/documents/: constants.py  forms.py  models.py  routes.py  services.py  status.py
app/drivers/: __init__.py  contracts.py  forms.py  models.py  routes.py
app/main/: __init__.py  routes.py
app/models/: __init__.py  user.py
app/organisations/: __init__.py  forms.py  models.py  routes.py
app/payroll/: __init__.py  forms.py  models.py  routes.py
app/rates/: __init__.py  cli.py  loader.py  models.py  routes.py  schemas.py  services.py
app/services/: __init__.py  nbp.py  nbp_cli.py  (+2 more)
tests/: conftest.py  test_contracts.py  test_fleet_vacations.py  test_inbox_form.py  test_inbox_pipeline.py  test_inbox_routes.py  test_nbp.py  test_payroll_calculator.py  test_payroll_phase2.py  test_persistence.py  test_rates_loader.py  test_recognizer.py  test_smoke.py  test_tachograph_sync.py  test_vacations.py  test_validation.py  test_vehicles_list.py
(+106 files in other folders)
